# codx_fitness_app

./: LICENSE  README.md  exercise_database.py  exercises.db  main.py  pyproject.toml
tests/: __init__.py  test_logic.py
